# libwebdev

./: .gitignore  CMakeLists.txt  README.md  references.txt
cpp/: RequestHandler.cpp  defaults.h  requests.cpp
include/: RequestHandler.hpp  enums.hpp  requests.hpp
shared/: enums.hpp  utils.hpp
test/: run.sh  test.cpp
